--- a/Snacktacular/Info.plist
+++ b/Snacktacular/Info.plist
@@ -31,6 +31,10 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Snacktacular needs access to the device location in order to show this on a map.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Snacktacular needs access to the device location in order to show this on a map.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -54,15 +58,11 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Snacktacular needs access to the device location in order to show this on a map.</string>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>Snacktacular needs access to the device location in order to show this on a map.</string>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
 	<key>NSCameraUsageDescription</key>
-	<string>&quot;Snacktacular needs access to your camera in order to post photos.</string>
+	<string>Snacktacular will need access to your camera in order to post photos.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>&quot;Snacktacular needs access to your photo library in order to post photos.</string>
+	<string>Snacktacular will need access to your photo library in order to post photos.</string>
 </dict>
 </plist>
